# quick_demo

./: .env.development  .env.production  .gitignore  CLAUDE.md  DEBUG_GUIDE.md  FONT_SETUP.md  README.md  electron.vite.config.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  test_colors.py  test_monospace_font.py  tsconfig.json
backend/: app.py  pty_handler.py  socketio_handler.py
electron/main/: main.ts
electron/main/utils/: flask_api.ts  index.ts  security-manager.ts  ssh-ipc-handlers.ts  ssh-tunnel-manager.ts
electron/preload/: preload.ts
src/: App.vue  main.ts
src/assets/: fonts.css
src/assets/fonts/: README.md
src/components/: ApiTester.vue  CustomDialog.vue  InstantDialog.vue  ThemeSwitch.vue  ThemeSwitch2.vue
src/components/PiniaDemo/: CounterButtons.vue  CounterDisplay.vue
src/components/Terminal/: CommandInput.vue  TaskOutput.vue  TaskSidebar.vue  Terminal.vue  XtermTaskOutput.vue
src/config/: xtermThemes.ts
src/router/: index.ts
src/services/: apiService.ts  terminalService.ts
src/shared/: flaskapi_type.ts
src/stores/: apiConfigStore.ts  index.ts  terminalStore.ts
src/styles/: element-theme.scss  element-theme2.scss
src/types/: api.ts  env.d.ts  ssh_type.ts  terminal.ts  vue-shim.d.ts
src/utils/: fontLoader.ts
src/views/: ApiTestDemo.vue  FlaskApiDemo.vue  Home.vue  PiniaDemo.vue  SSHConfigDemo.vue  SettingDemo.vue  SwitchDemo.vue  TerminalManager.vue
