[project]
name = "quick-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "pexpect>=4.9.0",
    "ptyprocess>=0.7.0",
    "rich>=14.1.0",
]
